--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,8 +3,7 @@ project:
   output-dir: docs
 website:
   title: "Krishnakant A"
-  image : Escher Small.png
-  favicon: "Escher Small.png"
+  
   page-navigation: true
   navbar:
      
@@ -30,7 +29,7 @@ website:
     - id: Sea_of_everything
       title: "Sea of Everything"
       style: "docked"
-      background: light
+      background: dark
       collapse-level: 1
       align: left
       contents:
@@ -51,7 +50,7 @@ website:
         
 format:
   html:
-    theme: darkly
+    theme: sketchy
     css: styles.css
     toc: true
     self-contained-math: true
