--- a/_quarto.yml
+++ b/_quarto.yml
@@ -88,7 +88,7 @@ website:
           contents: 
             - text: "Data Analysis"
               href: docu/SEA/data_analysis.qmd
-            - text: "Machine Learning in C++"
+           # - text: "Machine Learning in C++"
             - text: "Machine Learning Theory and Practice"
               href: docu/SEA/Machine Learning.qmd
             - text: "Machine Learning for finance"
