--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,6 +12,8 @@ website:
     background: primary
     collapse-below: lg
     left:
+      - href: index.html
+        text: "About"
       - href: docu/anotherpage.qmd
         text: "Home"
       - text: "Sea of Everything"
