--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,7 +12,7 @@ website:
     background: primary
     collapse-below: lg
     left:
-      - href: index.html
+      - href: index.qmd
         text: "About"
       - href: docu/anotherpage.qmd
         text: "Home"
